<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/medium_margin"
    app:cardElevation="@dimen/small_margin"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:layout_margin="@dimen/small_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="252dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Judul"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Perilisan"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Penulis"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Penyanyi"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="Agensi"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/deskripsi"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/titik_dua"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_judul_musik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_musik"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_perilisan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/tgl_rilis"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_penulis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/penulis"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_penyanyi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/penyanyi"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_agensi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/agensi"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/deskripsi"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_musik"
            android:layout_width="256dp"
            android:layout_height="139dp"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </LinearLayout>
</androidx.cardview.widget.CardView>